Updated Jack Doherty

--- a/date_roulette_starter_jackdoherty.html
+++ b/date_roulette_starter_jackdoherty.html
@@ -1,13 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<meta charset="UTF-8">
-
-<title>My Portfolio</title>
-
+﻿<!DOCTYPE html>
+<html>
+<head>
+    
 <meta name="viewport" content="width=device-width,initial-scale=1"> 
 
-<link rel="stylesheet" href="/Users/nsimon26/Downloads/index-saved_style.css">
+<link rel="stylesheet" href="/Users/nsimon26/Downloads/index-saved_style.csss">
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -34,54 +31,39 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
       <link rel="stylesheet" href="/Users/nsimon26/Downloads/index-saved_style.css">
-  
-  </body>
 
-<style>
 
-</style>
 
-<script src=""> </script>
 
+
+
+
+
+
+    <title>Date Roulette Jack Doherty</title>
+</head>
 <body>
-
-<!-- Navbars and tabs-->
-<ul class="nav nav-tabs">
-  <li class="nav-item">
-    <a class="nav-link" href="/Users/nsimon26/Desktop/portfolio-neyos26/JackDoherty.html">Back to Home Page</a>
-  </li>
-
+    
+    <div class="about-section" align="center">
+  <img src="/Users/nsimon26/Desktop/Screenshot 2024-10-02 at 10.01.19 AM.png"  width="1000px", height= "500px">
 </div>
-
-
-
-
-
-
-
-
-
-
-<!-- Image to Provide Porfolio a good look!-->
-<img src="/Users/nsimon26/Desktop/BIGportfolio comp sci/cc220f44-jack-doherty.jpeg" alt="LA" align="center" height="500" width="1450">
-<div class="about-section">
-    <h1 align="center">Jack Doherty</h1>
-    <p align="center">Jack Doherty is an American entrepreneur and YouTube personality known for his engaging content and innovative approach to digital media. He gained popularity by sharing various challenges, vlogs, and lifestyle videos that resonate with a younger audience. Jack is recognized for his charismatic personality and ability to connect with his viewers, often incorporating humor and creativity into his videos. In addition to his online presence, he has ventured into business, exploring opportunities in e-commerce and brand collaborations. His growth on platforms like Instagram and TikTok further showcases his influence in the digital space. Overall, Jack Doherty exemplifies the new wave of content creators leveraging social media for personal and professional success.</p>
+  <h1 align="center">Date Roulette</h1>
+  <p align ="center" style="font-size: 20px;">As the sun set, casting a warm glow over the city, Jack Doherty rolled up in his dazzling Lamborghini, its engine purring softly. He flashed a playful smile and said, "Care for a ride? I promise to make every moment feel like a scene from a movie." With a wink, he added, "And if the stars are jealous, I’ll take you somewhere even they can’t shine!"</p>
+</h3>
 </div>
+<div class="row" align="center">
+        <!-- options start here, add another div class col and button to add an aditional option -->
+             <div class="col-sm-6">
+             <a class="btn btn-danger" href=""> Back to start </a>
+        </div>
+        <!-- include go back button on every slide/Change the link it goes to to one slide backwards -->
+        <div class="col-sm-6">
+            <a class="btn btn-info" href=""> Go back </a>
+        </div>
 
-</ul>
-<div class="row" align ="center" >
-<a class="btn btn-info" href="/Users/nsimon26/Desktop/portfolio-neyos26/date_roulette_starter_jackdoherty.html">Start Dating Roulette</a>
-</div>
 
 
- 
-<!--Projects and Boxes-->
- 
-
+    <!-- This is a comment: Remember to customize your page! -->
 
 </body>
 </html>
-
-
-
