Final Jack Doherty Project

--- a/open.html
+++ b/open.html
@@ -1,7 +1,5 @@
 ﻿<!DOCTYPE html>
 <html>
-<head>
-    
 <meta name="viewport" content="width=device-width,initial-scale=1"> 
 
 <link rel="stylesheet" href="/Users/nsimon26/Downloads/index-saved_style.csss">
@@ -38,32 +36,30 @@
 
 
 
-
+<ul class="nav nav-tabs">
+  <li class="nav-item">
+    <a class="nav-link" href="/Users/nsimon26/Desktop/portfolio-neyos26/4-guys_cyoa.html">Back to Home Page</a>
 
     <title>Date Roulette Jack Doherty</title>
 </head>
 <body>
-    
+    <h1 align="center">Date Roulette</h1>
     <div class="about-section" align="center">
-  <img src="/Users/nsimon26/Desktop/Screenshot 2024-10-02 at 10.01.19 AM.png"  width="1000px", height= "500px">
+  <img src="/Users/nsimon26/Desktop/portfolio-neyos26/scaryblackbookjdhorts.jpeg"  width="500px", height= "500px">
+    <img src="/Users/nsimon26/Desktop/portfolio-neyos26/shocked.gif" width="400px", height= "500px">
 </div>
-  <h1 align="center">Date Roulette</h1>
-  <p align ="center" style="font-size: 20px;">In a vibrant city, Jack spotted a girl admiring his Lamborghini, her eyes wide with fascination. He approached her with a playful grin, suggesting, “Want to take a spin in the coolest ride in town?” Intrigued, she raised an eyebrow, prompting him to add, “I promise the views are even better from the passenger seat!” After a moment’s hesitation, she laughed and climbed in, and as they sped off together, the thrill of the ride buzzed around them, creating an unforgettable moment.</p>
+  <p align ="center" style="font-size: 20px;">
+As you carefully peel open the plastic bag, your fingers brush against something unexpected—a strange, black-covered book nestled inside. The moment you lift it, an air of mystery surrounds you, as if the book holds secrets waiting to be uncovered. Its cover is smooth and unmarked, giving no clue to its contents or origins. You can’t shake the feeling that this object has a story of its own, beckoning you to explore its hidden depths.</p>
 </h3>
 </div>
 <div class="row" align="center">
         <!-- options start here, add another div class col and button to add an aditional option -->
              <div class="col-sm-6">
-             <a class="btn btn-info" href="/Users/nsimon26/Desktop/portfolio-neyos26/dumpster_dive_JD.html">Continue</a>
+             <a class="btn btn-info" href="/Users/nsimon26/Desktop/portfolio-neyos26/telljack.html">Tell jack about the book.</a>
         </div>
         <!-- include go back button on every slide/Change the link it goes to to one slide backwards -->
         <div class="col-sm-6">
-            <a class="btn btn-danger" href="/Users/nsimon26/Desktop/portfolio-neyos26/4-guys_cyoa.html">Decline</a>
+            <a class="btn btn-danger" href="/Users/nsimon26/Desktop/portfolio-neyos26/hidethebook.html">Hide the book.</a>
         </div>
 
-
-
-    <!-- This is a comment: Remember to customize your page! -->
-
-</body>
 </html>
