--- a/point_it_out.html
+++ b/point_it_out.html
@@ -1,10 +1,8 @@
 ﻿<!DOCTYPE html>
 <html>
-<head>
-    
 <meta name="viewport" content="width=device-width,initial-scale=1"> 
 
-<link rel="stylesheet" href="/Users/nsimon26/Downloads/index-saved_style.csss">
+<link rel="stylesheet" href="/Users/nsimon26/Downloads/point_it_out.css">
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -13,7 +11,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
 <https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css>
-  <link rel="stylesheet" href="/Users/nsimon26/Downloads/index-saved_style.css">
+  <link rel="stylesheet" href="/Users/nsimon26/Downloads/point_it_out.css">
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js">
       </script>
@@ -30,7 +28,7 @@
       <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
-      <link rel="stylesheet" href="/Users/nsimon26/Downloads/index-saved_style.css">
+      <link rel="stylesheet" href="/Users/nsimon26/Downloads/point_it_out.css">
 
 
 
@@ -38,32 +36,29 @@
 
 
 
-
+<ul class="nav nav-tabs">
+  <li class="nav-item">
+    <a class="nav-link" href="/Users/nsimon26/Desktop/portfolio-neyos26/4-guys_cyoa.html">Back to Home Page</a>
 
     <title>Date Roulette Jack Doherty</title>
 </head>
 <body>
-    
+    <h1 align="center">Date Roulette</h1>
     <div class="about-section" align="center">
-  <img src="/Users/nsimon26/Desktop/Screenshot 2024-10-02 at 10.01.19 AM.png"  width="1000px", height= "500px">
+  <img src="/Users/nsimon26/Desktop/portfolio-neyos26/jack-doherty_stares.jpeg"  width="500px", height= "500px">
 </div>
-  <h1 align="center">Date Roulette</h1>
-  <p align ="center" style="font-size: 20px;">In a vibrant city, Jack spotted a girl admiring his Lamborghini, her eyes wide with fascination. He approached her with a playful grin, suggesting, “Want to take a spin in the coolest ride in town?” Intrigued, she raised an eyebrow, prompting him to add, “I promise the views are even better from the passenger seat!” After a moment’s hesitation, she laughed and climbed in, and as they sped off together, the thrill of the ride buzzed around them, creating an unforgettable moment.</p>
+  <p align ="center" style="font-size: 20px;">
+Jack's eyes lock onto yours, his expression unreadable, but the silence between you feels heavy with unspoken words. He stands there, seemingly weighing the moment, as if deciding how much to reveal. The air is thick with anticipation, and you can sense that something significant is about to unfold. Each second stretches out, leaving you eager to break the silence and uncover what lies beneath his calm facade.</p>
 </h3>
 </div>
 <div class="row" align="center">
         <!-- options start here, add another div class col and button to add an aditional option -->
              <div class="col-sm-6">
-             <a class="btn btn-info" href="/Users/nsimon26/Desktop/portfolio-neyos26/dumpster_dive_JD.html">Continue</a>
+             <a class="btn btn-info" href="/Users/nsimon26/Desktop/portfolio-neyos26/getout.html">Try to get out of his car.</a>
         </div>
         <!-- include go back button on every slide/Change the link it goes to to one slide backwards -->
         <div class="col-sm-6">
-            <a class="btn btn-danger" href="/Users/nsimon26/Desktop/portfolio-neyos26/4-guys_cyoa.html">Decline</a>
+            <a class="btn btn-danger" href="/Users/nsimon26/Desktop/portfolio-neyos26/continue_asking.html">Continue asking him about the plastic bag.</a>
         </div>
 
-
-
-    <!-- This is a comment: Remember to customize your page! -->
-
-</body>
 </html>
