--- a/index-saved.html
+++ b/index-saved.html
@@ -7,7 +7,7 @@
 
 <meta name="viewport" content="width=device-width,initial-scale=1"> 
 
-<link rel="stylesheet" href="/Users/nsimon26/Downloads/index-saved_style.css">
+<link rel="stylesheet" href="freejrob.css">
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -16,7 +16,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
 <https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css>
-  <link rel="stylesheet" href="/Users/nsimon26/Downloads/index-saved_style.css">
+  <link rel="stylesheet" href="cyoa-style.css">
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js">
       </script>
@@ -24,8 +24,8 @@
       <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
-      <link rel="stylesheet" href="/Users/nsimon26/Downloads/index-saved_style.css">
-      <link rel="stylesheet" href="/Users/nsimon26/Downloads/index-saved_style.css">
+      <link rel="stylesheet" href="freejrob.css">
+      <link rel="stylesheet" href="freejrob.css">
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js">
       </script>
@@ -33,7 +33,7 @@
       <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
-      <link rel="stylesheet" href="/Users/nsimon26/Downloads/index-saved_style.css">
+      <link rel="stylesheet" href="freejrob.css">
   
   </body>
 
@@ -66,13 +66,14 @@
 <img src="/Users/nsimon26/Desktop/BIGportfolio comp sci/cc220f44-jack-doherty.jpeg" alt="LA" align="center" height="500" width="1450">
 <div class="about-section">
     <h1 align="center">Jack Doherty</h1>
-    <p align="center">Jack Doherty is an American entrepreneur and YouTube personality known for his engaging content and innovative approach to digital media. He gained popularity by sharing various challenges, vlogs, and lifestyle videos that resonate with a younger audience. Jack is recognized for his charismatic personality and ability to connect with his viewers, often incorporating humor and creativity into his videos. In addition to his online presence, he has ventured into business, exploring opportunities in e-commerce and brand collaborations. His growth on platforms like Instagram and TikTok further showcases his influence in the digital space. Overall, Jack Doherty exemplifies the new wave of content creators leveraging social media for personal and professional success.</p>
+    <p align="center">Jack Doherty is a talented content creator and social media influencer known for his engaging videos and relatable humor. He gained popularity on platforms like TikTok and YouTube, where he showcases his creative skits and challenges. With a knack for connecting with his audience, Jack often shares snippets of his everyday life, offering a glimpse into his personality. He is also recognized for his collaborative projects with fellow creators, expanding his reach and influence. Beyond entertainment, Jack is passionate about philanthropy, often using his platform to support various causes. As he continues to grow his brand, Jack remains dedicated to inspiring and entertaining his followers.</p>
+
+
 </div>
 
 </ul>
-<div class="row" align ="center" >
-<a class="btn btn-info" href="/Users/nsimon26/Desktop/portfolio-neyos26/date_roulette_starter_jackdoherty.html">Start Dating Roulette</a>
-</div>
+<div class="row">
+<a class="btn btn-info" href="/Users/nsimon26/Desktop/portfolio-neyos26/date_roulette_starter_jackdoherty.html">Advance</a>
 
 
  
